Reuse fetchRawFileContent() everywhere